# renderdoc

./: CMakeLists.txt
qrenderdoc/: CMakeLists.txt
qrenderdoc/Code/Interface/: PersistantConfig.h
qrenderdoc/Windows/Dialogs/: AnalyticsPromptDialog.ui
renderdoc/: CMakeLists.txt
renderdoc/core/: replay_proxy.cpp
renderdoc/data/: glsl_shaders.cpp
renderdoc/driver/shaders/dxbc/: dxbc_container.cpp
renderdoc/driver/shaders/spirv/: CMakeLists.txt  glslang_compile.cpp  spirv_compile.cpp
renderdoc/serialise/: lz4io.h
